[package]
name = "jarvis-desktop"
version = "1.0.0"
description = "JARVIS AI Assistant"
authors = ["Admin"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enigo = "0.1.2"
sysinfo = "0.29"
screenshots = "0.8"
base64 = "0.21"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
